    diagram after simulating.(#126)

    * Fixed: The code generated for the Reset instruction
    of any Counter type looks incorrect as the counter variable is reset
    to 0 and not to the counter's "Start Value" value.(#125)

    * Fixed: The code generated by "Compile ANSIC" for the Look-Up Table
    instruction [LUT] does not include a declaration for the table's index
    variable.(#124)

    * Fixed: Bug in FORMATTED STRING OVER UART element, when using
    command \0xFE instead of \xFE ldmicro closes.(#120)

== Release 4.4.1.1

    * Fixed: Bug in insert SET BIT instructions with arduino (#118)

== Release 4.4.1.0

    * Fixed: "Compile ANSIC" fails and LDmico exits with an error when
    the INT_SET_VARIABLE_NEG instruction is used. #117

    * Fixed: Test bit instructions (IF SET bit) with arduino #116

    * New: Kind of inputs of ladder elements
    https://github.com/LDmicro/LDmicro/wiki/Kind-of-inputs-of-ladder-elements

    '-' Direct static logic input. Active at external 1.
    'o' Inverse static logic input. Logic negation at input. External 0 produces internal 1.
    '/' Dynamic input active on 0 to 1 transition for positive logic.
    '\' Dynamic input active on 1 to 0 transition for positive logic.

    * New: Timer with variable delay
    https://github.com/LDmicro/LDmicro/wiki/Timer-with-variable-delay

== Release 4.4.0.2

    * Optimized: PIECEWISE LINEAR TABLE (reduced size 10%), ADD and SUB operations for PIC's.

    * Fixed: READ ADC for EnhancedMidrangeCore14bit PIC's.

    * Fixed: AUTO_PAGING version 4.3 for PIC's.

    * Wiki: Disable Pull up resistors
    https://github.com/LDmicro/LDmicro/wiki/Disable-Pull-up-resistors

    * Wiki: Pull down resistors
    https://github.com/LDmicro/LDmicro/wiki/Pull-down-resistors

    * Added: REFS parameter for ADC Voltage Reference.

    * Wiki: ADC Voltage Reference
    https://github.com/LDmicro/LDmicro/wiki/ADC-Voltage-Reference

    How to measure battery voltage (Atmel AVR)