@@ -15,6 +15,9 @@
     instruction [LUT] does not include a declaration for the table's index
     variable.(#124)
 
+    * Fixed: The code generated by "Compile ANSIC" for the Logical Shift
+    instruction generates a declaration "STATIC SBYTE 1 = 0;" (#123)
+
     * Fixed: Bug in FORMATTED STRING OVER UART element, when using
     command \0xFE instead of \xFE ldmicro closes.(#120)
 
